<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:padding="5dp"
            android:text="@string/terms"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



                <RadioGroup
                    android:id="@+id/rgTermsLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbAll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/all_term_work" />

                    <RadioButton
                        android:id="@+id/rbFullDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/full_day_work" />

                    <RadioButton
                        android:id="@+id/rbFlexTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flex_time_work" />
                </RadioGroup>


                <RadioGroup
                    android:id="@+id/rgTermsRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbRemote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/remote_work" />

                    <RadioButton
                        android:id="@+id/rbNight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/night_work" />
                </RadioGroup>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:padding="5dp"
            android:text="@string/salary"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <RadioGroup
                android:id="@+id/rgSalaryLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbAllSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_term_work" />

                <RadioButton
                    android:id="@+id/rbFivePlus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five_plus" />


            </RadioGroup>


            <RadioGroup
                android:id="@+id/rgSalaryRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbTenPlus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_plus" />

                <RadioButton
                    android:id="@+id/rbThirtyPlus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thirty_plus" />
            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondLayout"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/cancel_btn"
            android:textColor="@color/colorVioletDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:text="@string/ok_btn"
            android:textColor="@color/colorVioletDark"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>