<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:padding="5dp"
            android:text="@string/terms"
            android:textSize="22sp" />


        <RadioGroup
            android:id="@+id/rgTerms"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <RadioGroup
                        android:id="@+id/rgTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rbAll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/all_term_work" />

                        <RadioButton
                            android:id="@+id/rbFullDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/full_day_work"
                            />

                        <RadioButton
                            android:id="@+id/rbFlexTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/flex_time_work" />
                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbRemote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/remote_work" />

                    <RadioButton
                        android:id="@+id/rbNight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/night_work" />
                </LinearLayout>
            </LinearLayout>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:padding="5dp"
            android:text="@string/salary"
            android:textSize="22sp" />


        <RadioGroup
            android:id="@+id/rgSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbAllSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/all_term_work" />

                    <RadioButton
                        android:id="@+id/rbFivePlus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five_plus" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbTenPlus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ten_plus" />

                    <RadioButton
                        android:id="@+id/rbThirtyPlus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thirty_plus" />
                </LinearLayout>
            </LinearLayout>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondLayout"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/cancel_btn"
            android:background="@drawable/btn_background"
            android:textColor="@color/colorVioletDark"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/ok_btn"
            android:background="@drawable/btn_background"
            android:textColor="@color/colorVioletDark"/>
    </LinearLayout>


</RelativeLayout>